--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -50,5 +50,9 @@
             android:id="@+id/intentsView"
             android:name="com.google.ticketo.ui.profile.my_profile.intents.IntentsView"
             android:label="intents_fragment"
-            tools:layout="@layout/intents_fragment" />
+            tools:layout="@layout/intents_fragment" >
+        <action
+                android:id="@+id/action_intentsView_to_eventDetailsView"
+                app:destination="@id/eventDetailsView" />
+    </fragment>
 </navigation>
