--- a/app/src/main/res/layout/intents_fragment.xml
+++ b/app/src/main/res/layout/intents_fragment.xml
@@ -17,7 +17,7 @@
             app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
-                android:id="@+id/favourites_back"
+                android:id="@+id/intents_back"
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
                 android:layout_marginStart="16dp"
@@ -37,7 +37,7 @@
                 android:text="@string/your_concerts"
                 android:textSize="22sp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/favourites_back"
+                app:layout_constraintStart_toEndOf="@+id/intents_back"
                 app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
