--- a/app/src/main/res/layout/my_profile_fragment.xml
+++ b/app/src/main/res/layout/my_profile_fragment.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
                 name="user"
-                type="com.google.ticketo.model.User"
-        />
+                type="com.google.ticketo.model.User" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -143,48 +142,70 @@
                             app:layout_constraintStart_toStartOf="@+id/textView4"
                             app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
-                    <TextView
-                            android:id="@+id/textView3"
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                            android:id="@+id/my_profile_buy_container"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:textSize="20sp"
-                            android:text="@string/you_are_buying"
-                            android:background="@null"
                             android:layout_marginTop="48dp"
                             app:layout_constraintEnd_toEndOf="@+id/my_profile_recommend"
                             app:layout_constraintStart_toStartOf="@+id/my_profile_recommend"
-                            app:layout_constraintTop_toBottomOf="@+id/my_profile_recommend" />
+                            app:layout_constraintTop_toBottomOf="@+id/my_profile_recommend">
 
-                    <TextView
-                            android:id="@+id/textView5"
+
+                        <TextView
+                                android:id="@+id/textView3"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:background="@null"
+                                android:text="@string/you_are_buying"
+                                android:textSize="20sp"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toTopOf="parent" />
+
+
+                        <TextView
+                                android:id="@+id/my_profile_buy_counter"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="24dp"
+                                app:layout_constraintEnd_toEndOf="@+id/textView3"
+                                app:layout_constraintStart_toStartOf="@+id/textView3"
+                                app:layout_constraintTop_toBottomOf="@+id/textView3" />
+
+
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                            android:id="@+id/my_profile_sell_container"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:textSize="20sp"
-                            android:text="@string/you_are_selling"
-                            android:background="@null"
                             android:layout_marginTop="48dp"
                             app:layout_constraintEnd_toEndOf="@+id/my_profile_warn"
                             app:layout_constraintStart_toStartOf="@+id/my_profile_warn"
-                            app:layout_constraintTop_toBottomOf="@+id/my_profile_warn" />
+                            app:layout_constraintTop_toBottomOf="@+id/my_profile_warn">
 
-                    <TextView
-                            android:id="@+id/my_profile_buy_counter"
-                            android:layout_width="30dp"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="24dp"
-                            app:layout_constraintEnd_toEndOf="@+id/textView3"
-                            app:layout_constraintStart_toStartOf="@+id/textView3"
-                            app:layout_constraintTop_toBottomOf="@+id/textView3" />
+                        <TextView
+                                android:id="@+id/textView5"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:background="@null"
+                                android:text="@string/you_are_selling"
+                                android:textSize="20sp"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toTopOf="parent" />
 
-                    <TextView
-                            android:id="@+id/my_profile_sell_counter"
-                            android:layout_width="30dp"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="24dp"
-                            app:layout_constraintEnd_toEndOf="@+id/textView5"
-                            app:layout_constraintStart_toStartOf="@+id/textView5"
-                            app:layout_constraintTop_toBottomOf="@+id/textView5" />
+                        <TextView
+                                android:id="@+id/my_profile_sell_counter"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="24dp"
+                                app:layout_constraintEnd_toEndOf="@+id/textView5"
+                                app:layout_constraintStart_toStartOf="@+id/textView5"
+                                app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
+                    </androidx.constraintlayout.widget.ConstraintLayout>
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
