--- a/app/src/main/res/layout/event_details_fragment.xml
+++ b/app/src/main/res/layout/event_details_fragment.xml
@@ -7,7 +7,7 @@
     <data>
         <variable
                 name="event"
-                type="com.google.ticketo.model.Event"/>
+                type="com.google.ticketo.model.EventWithIntents"/>
     </data>
 
 
