--- a/app/src/main/res/layout/intent_list_fragment.xml
+++ b/app/src/main/res/layout/intent_list_fragment.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -11,4 +13,17 @@
             android:layout_height="match_parent">
     </androidx.recyclerview.widget.RecyclerView>
 
-</FrameLayout>
+    <TextView
+            android:id="@+id/intent_list_empty_info"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/empty_list"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="@+id/intent_list"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:layout_editor_absoluteX="206dp">
+    </TextView>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
