--- a/app/src/main/res/layout/users_list_fragment.xml
+++ b/app/src/main/res/layout/users_list_fragment.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
@@ -10,4 +11,16 @@
             android:layout_height="match_parent">
     </androidx.recyclerview.widget.RecyclerView>
 
-</FrameLayout>
+    <TextView
+            android:id="@+id/users_list_empty_info"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            android:text="@string/no_offers"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+    </TextView>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
