--- a/app/src/main/res/layout/event_details_fragment.xml
+++ b/app/src/main/res/layout/event_details_fragment.xml
@@ -21,7 +21,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
-                android:visibility="gone"/>
+                android:visibility="gone" />
 
         <androidx.coordinatorlayout.widget.CoordinatorLayout
                 android:layout_width="match_parent"
@@ -271,32 +271,42 @@
                                         app:layout_constraintStart_toStartOf="@+id/event_details_sellers"
                                         app:layout_constraintTop_toBottomOf="@+id/event_details_sellers" />
 
+                                <ImageView
+                                        android:id="@+id/event_details_user_pic"
+                                        android:layout_width="50dp"
+                                        android:layout_height="50dp"
+                                        android:layout_marginStart="16dp"
+                                        android:layout_marginTop="80dp"
+                                        android:adjustViewBounds="true"
+                                        app:layout_constraintStart_toStartOf="parent"
+                                        app:layout_constraintTop_toBottomOf="@+id/event_details_buyers" />
+
+
                                 <com.google.android.material.textview.MaterialTextView
                                         android:id="@+id/event_details_input"
-                                        android:layout_width="match_parent"
+                                        android:layout_width="0dp"
                                         android:layout_height="wrap_content"
-                                        android:layout_marginStart="24dp"
-                                        android:layout_marginTop="32dp"
+                                        android:layout_marginStart="16dp"
                                         android:layout_marginEnd="24dp"
                                         android:background="@drawable/comment_input"
                                         android:hint="@string/write_something"
-                                        android:paddingTop="10dp"
-                                        android:paddingBottom="10dp"
                                         android:paddingStart="10dp"
+                                        android:paddingTop="10dp"
                                         android:paddingEnd="10dp"
+                                        android:paddingBottom="10dp"
+                                        app:layout_constraintBottom_toBottomOf="@+id/event_details_user_pic"
                                         app:layout_constraintEnd_toEndOf="parent"
-                                        app:layout_constraintStart_toStartOf="parent"
-                                        app:layout_constraintTop_toBottomOf="@+id/event_details_buy" />
+                                        app:layout_constraintStart_toEndOf="@+id/event_details_user_pic"
+                                        app:layout_constraintTop_toTopOf="@+id/event_details_user_pic" />
 
-                                <TextView
-                                        android:id="@+id/textView3"
-                                        android:layout_width="wrap_content"
+                                <androidx.recyclerview.widget.RecyclerView
+                                        android:id="@+id/event_details_comments"
+                                        android:layout_width="match_parent"
                                         android:layout_height="wrap_content"
-                                        android:layout_marginTop="1000dp"
-                                        android:text="TextView"
-                                        app:layout_constraintEnd_toEndOf="parent"
+                                        android:layout_marginTop="32dp"
+                                        android:paddingBottom="10dp"
                                         app:layout_constraintStart_toStartOf="parent"
-                                        app:layout_constraintTop_toBottomOf="@+id/event_details_buy" />
+                                        app:layout_constraintTop_toBottomOf="@+id/event_details_input" />
 
                             </androidx.constraintlayout.widget.ConstraintLayout>
                         </androidx.constraintlayout.widget.ConstraintLayout>
