--- a/app/src/main/res/layout/dashboard_fragment.xml
+++ b/app/src/main/res/layout/dashboard_fragment.xml
@@ -134,7 +134,9 @@
                     <androidx.recyclerview.widget.RecyclerView
                             android:id="@+id/dashboard_fragment_events_in_city"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
+                            android:layout_height="wrap_content"
+                            android:paddingStart="4dp"
+                            android:paddingEnd="4dp">
                     </androidx.recyclerview.widget.RecyclerView>
                 </LinearLayout>
             </RelativeLayout>
