--- a/app/src/main/res/layout/event_details_fragment.xml
+++ b/app/src/main/res/layout/event_details_fragment.xml
@@ -16,16 +16,20 @@
             android:layout_height="match_parent">
 
         <ProgressBar
-                android:id="@+id/event_details_scrollview_progress"
+                android:id="@+id/event_details_main_progressbar"
                 style="?android:attr/progressBarStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
-                android:visibility="gone" />
+                android:visibility="visible"
+                tools:visibility="gone"/>
 
         <androidx.coordinatorlayout.widget.CoordinatorLayout
+                android:id="@+id/event_details_main_container"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:visibility="gone"
+                tools:visibility="visible">
 
             <com.google.android.material.appbar.AppBarLayout
                     android:id="@+id/event_details_appbar_layout"
@@ -232,6 +236,7 @@
                                         android:layout_width="100dp"
                                         android:layout_height="wrap_content"
                                         android:layout_marginStart="70dp"
+                                        android:textSize="20sp"
                                         android:layout_marginTop="24dp"
                                         android:textAlignment="center"
                                         app:layout_constraintStart_toStartOf="parent"
@@ -244,6 +249,7 @@
                                         android:layout_marginTop="24dp"
                                         android:layout_marginEnd="70dp"
                                         android:textAlignment="center"
+                                        android:textSize="20sp"
                                         app:layout_constraintEnd_toEndOf="parent"
                                         app:layout_constraintTop_toBottomOf="@+id/event_details_time" />
 
@@ -276,7 +282,7 @@
                                         android:layout_width="50dp"
                                         android:layout_height="50dp"
                                         android:layout_marginStart="16dp"
-                                        android:layout_marginTop="80dp"
+                                        android:layout_marginTop="100dp"
                                         android:adjustViewBounds="true"
                                         app:layout_constraintStart_toStartOf="parent"
                                         app:layout_constraintTop_toBottomOf="@+id/event_details_buyers" />
