--- a/app/src/main/res/layout/my_profile_fragment.xml
+++ b/app/src/main/res/layout/my_profile_fragment.xml
@@ -102,7 +102,7 @@
                             android:id="@+id/textView2"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginStart="64dp"
+                            android:layout_marginStart="80dp"
                             android:layout_marginTop="64dp"
                             android:background="@null"
                             android:text="@string/recommend_you"
@@ -116,7 +116,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="64dp"
-                            android:layout_marginEnd="64dp"
+                            android:layout_marginEnd="80dp"
                             android:background="@null"
                             android:text="@string/warn_you"
                             android:textSize="20sp"
@@ -129,6 +129,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="24dp"
+                            android:textSize="20sp"
                             app:layout_constraintEnd_toEndOf="@+id/textView2"
                             app:layout_constraintStart_toStartOf="@+id/textView2"
                             app:layout_constraintTop_toBottomOf="@+id/textView2" />
@@ -138,6 +139,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="24dp"
+                            android:textSize="20sp"
                             app:layout_constraintEnd_toEndOf="@+id/textView4"
                             app:layout_constraintStart_toStartOf="@+id/textView4"
                             app:layout_constraintTop_toBottomOf="@+id/textView4" />
@@ -168,6 +170,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="24dp"
+                                android:textSize="20sp"
                                 app:layout_constraintEnd_toEndOf="@+id/textView3"
                                 app:layout_constraintStart_toStartOf="@+id/textView3"
                                 app:layout_constraintTop_toBottomOf="@+id/textView3" />
@@ -199,6 +202,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="24dp"
+                                android:textSize="20sp"
                                 app:layout_constraintEnd_toEndOf="@+id/textView5"
                                 app:layout_constraintStart_toStartOf="@+id/textView5"
                                 app:layout_constraintTop_toBottomOf="@+id/textView5" />
