--- a/app/src/main/res/layout/event_details_fragment.xml
+++ b/app/src/main/res/layout/event_details_fragment.xml
@@ -8,7 +8,7 @@
 
         <variable
                 name="event"
-                type="com.google.ticketo.model.EventWithIntents" />
+                type="com.google.ticketo.model.Event" />
     </data>
 
     <RelativeLayout
