--- a/app/src/main/res/layout/event_details_fragment.xml
+++ b/app/src/main/res/layout/event_details_fragment.xml
@@ -134,7 +134,7 @@
                                     android:layout_height="wrap_content"
                                     app:layout_constraintBottom_toBottomOf="parent"
                                     app:layout_constraintEnd_toEndOf="parent"
-                                    app:layout_constraintHorizontal_bias="0.0"
+                                    app:layout_constraintHorizontal_bias="0.5"
                                     app:layout_constraintStart_toStartOf="parent"
                                     app:layout_constraintTop_toBottomOf="@+id/event_details_image"
                                     app:layout_constraintVertical_bias="0.0">
@@ -235,10 +235,11 @@
                                         android:id="@+id/event_details_buyers"
                                         android:layout_width="100dp"
                                         android:layout_height="wrap_content"
-                                        android:layout_marginStart="70dp"
-                                        android:textSize="20sp"
                                         android:layout_marginTop="24dp"
                                         android:textAlignment="center"
+                                        android:textSize="20sp"
+                                        app:layout_constraintEnd_toStartOf="@+id/event_details_sellers"
+                                        app:layout_constraintHorizontal_bias="0.5"
                                         app:layout_constraintStart_toStartOf="parent"
                                         app:layout_constraintTop_toBottomOf="@+id/event_details_location_name" />
 
@@ -247,10 +248,11 @@
                                         android:layout_width="100dp"
                                         android:layout_height="wrap_content"
                                         android:layout_marginTop="24dp"
-                                        android:layout_marginEnd="70dp"
                                         android:textAlignment="center"
                                         android:textSize="20sp"
                                         app:layout_constraintEnd_toEndOf="parent"
+                                        app:layout_constraintHorizontal_bias="0.5"
+                                        app:layout_constraintStart_toEndOf="@+id/event_details_buyers"
                                         app:layout_constraintTop_toBottomOf="@+id/event_details_time" />
 
                                 <ProgressBar
